2001-01-18  Akim Demaille  <akim@epita.fr>

	* tests/atspecific.m4 (AT_CHECK_DEFINES): Discard
	STDLIB|INTTYPES|MEMORY|STRING|UNISTD.
	* tests/semantics.at (AC_CHECK_SIZEOF): Don't check the presence
	of default headers, as it's machine dependent.
	Reported by Jim Meyering and Nicolas Joly.

2001-01-18  Akim Demaille  <akim@epita.fr>

	* acgeneral.m4: Don't leave macro names in comments.
	* aclang.m4: Likewise.
	* configure.in: Likewise.
	* tests/semantics.at: Likewise.
	* tests/tools.at: Likewise.

2001-01-18  Akim Demaille  <akim@epita.fr>

	Medium term goal: AC_ macros can be tested with -W obsolete.

	* acgeneral.m4 (AC_RUN_IFELSE): Accept IF-CROSS-COMPILING.
	(AC_TRY_RUN): Use it.
	* acfunctions.m4: Start ousting AC_TRY_RUN and AC_TRY_COMPILE.
	* acspecific.m4 (AC_AIX, AC_MINIX, AC_ISC_POSIX): AC_BEFORE on
	AC_COMPILE_IFELSE and AC_RUN_IFELSE.

2001-01-18  Akim Demaille  <akim@epita.fr>

	* acgeneral.m4 (AC_INCLUDES_DEFAULT): Force the newline to avoid
	bad surprises.
	Reported by Jim.

2001-01-18  Akim Demaille  <akim@epita.fr>

	Require a perfect divert push/pop balance.

	* m4sugar.m4 (m4_divert, m4_divert_push, m4_divert_pop): Keep
	track of them in m4_divert_stack.
	(m4_divert_pop): Accept the expected current diversion as
	argument and m4_fatal if incorrect, or if there is nothing to pop.
	(globally): Specify the known m4_divert_pop.
	Preserve symbolic values when possible.
	* acgeneral.m4: No longer push the first diversion.
	Specify the known m4_divert_pop.
	(AC_PLAIN_SCRIPT): When m4_divert_push a diversion, m4_wrap its
	pop.
	(AC_INIT): Run AC_PLAIN_SCRIPT first, not last.
	* tests/m4sh.at (AS_DIRNAME & AS_DIRNAME_SED): Can't use m4_defun
	without m4_init.
	* m4sugar.m4: Likewise.

2001-01-18  Akim Demaille  <akim@epita.fr>

	* m4sugar.m4 (m4_defn, m4_undefine, m4_popdef): Unlike the
	builtin, fail on undefined symbols.
	* tests/torture.at (Torturing config.status): Stop playing nasty
	tricks with changequote.
	(AC_DEFUBST): Move here from...