@@ -105,6 +105,7 @@ Noah Elliott		elliott@hera.llnl.gov
 Noah Friedman		friedman@gnu.ai.mit.edu
 Ossama Othman		ossama@debian.org
 Patrick Tullmann	tullmann@cs.utah.edu
+Patrick Welche		prlw1@newn.cam.ac.uk
 Paul Berrevoets		paul@swi.com
 Paul Eggert		eggert@twinsun.com
 Paul Gampe		paulg@apnic.net
