@@ -1,5 +1,12 @@
 2001-01-18  Akim Demaille  <akim@epita.fr>
 
+	* tests/foreign.at (Autoconf & Libtool): `configure.in', not `.ac'
+	since Libtool does not yet support it.
+	Let the test suite be more verbose about at-path.
+	From Patrick Welche.
+
+2001-01-18  Akim Demaille  <akim@epita.fr>
+
 	* tests/atspecific.m4 (AT_CHECK_DEFINES): Discard
 	STDLIB|INTTYPES|MEMORY|STRING|UNISTD.
 	* tests/semantics.at (AC_CHECK_SIZEOF): Don't check the presence
